First javascript commit: Initial cleaning and updating done. Files not yet revised.

--- a/WebContent/editor_frame.html
+++ b/WebContent/editor_frame.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="js/Blockly/blocks_compressed.js"></script>
     <script type="text/javascript" src="js/Blockly/javascript_compressed.js"></script>
     <script type="text/javascript" src="js/Blockly/msg/js/en.js"></script>
-    <script type="text/javascript" src="js/ARCblocks.js"></script>
+    <script type="text/javascript" src="js/Blockly/custom/ARCblocks.js"></script>
     <style>
       html, body {
         background-color: #fff;
