Testing the REST class

--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -56,6 +56,13 @@
 		</td>
 	</tr>
    </table>
+    
+    Choose file to upload<br>
+    <form action="https://46.101.38.23:8443/veard/rest/dao/upload" method="post" enctype="multipart/form-data">
+    	<input name="file" id="filename" type="file" /><br><br>
+    	<button name="submit" type="submit">Upload</button>
+    </form>
+    
   <div id='footer'></div>
 <script src="./js/editor.js"></script>
 </body></html>
