--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -32,7 +32,7 @@
 		<button id='resetButton'>Reset</button>
 		<button id='runButton'>Run</button>
 		<span id='modifiedStatus'>saved</span> //Change the save button to active instead
-		<button id='saveREST' action="./rest/editor/save/ohmanohmanohman" method="POST">REST</button>
+		<button id='saveREST' action="./rest/dao/save/" method="POST">REST</button>
         <br>Choose file to upload<br>
         <form action="./rest/dao/upload" method="post" enctype="multipart/form-data">
             <input name="file" id="filename" type="file" /><br><br>
