--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -35,17 +35,17 @@
 		<button id='saveREST' action="./rest/dao/save/" method="POST">REST</button>
         <br>Choose file to upload<br>
         <form action="./rest/dao/upload" method="post" enctype="multipart/form-data">
-            <input name="file" id="filename" type="file" /><br><br>
+            <input name="file" id="filename" type="file" /><br>
     	   <button name="submit" type="submit">Upload</button>
         </form>
         <br>Choose MODEL to upload<br>
         <form action="./rest/dao/upload/model" method="post" enctype="multipart/form-data">
-            <input name="file" id="filename" type="file" /><br><br>
+            <input name="file" id="filename" type="file" /><br>
     	   <button name="submit" type="submit">Upload</button>
         </form>
         <br>Choose IMAGE to upload<br>
         <form action="./rest/dao/upload/image" method="post" enctype="multipart/form-data">
-            <input name="file" id="filename" type="file" /><br><br>
+            <input name="file" id="filename" type="file" /><br>
     	   <button name="submit" type="submit">Upload</button>
         </form>
 	</div>  
