Developing the webpage

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,9 +23,9 @@
 
 <body role="document">
 	<div id=header></div>
-	<div class="container" role="main"> //TODO: change this placeholder for a (for now) local storage of projects...
-	PLACEHOLDER
+	<div class="container" role="main"> 
 		<div id="thumbs" class="row">
+            PLACEHOLDER
 			<ul  class="thumbnails">
 	            <li class="col-md-3">
 	              <div class="thumbnail">
