--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -64,6 +64,9 @@
 			  	<div class="tab-pane fade active in" id="editor">
 			    	<iframe src="editor_frame.html"></iframe>
 			  	</div>
+                <div class="tab-pane fade" id="assets">
+			    	<iframe src="editor_assets.html"></iframe>
+			    </div>
 			  	<div class="tab-pane fade" id="viewer">
 			    	<iframe class='viewFrame' src="editor_view.html"></iframe>
 			    </div>
