Developing the webpage

--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -54,6 +54,7 @@
 		<td class="navbar">
 		    <ul id="myTab" class="nav nav-tabs">
 		  		<li class="active"><a href="#editor" data-toggle="tab">Editor</a></li>
+                <li><a href="#assets" data-toggle="tab">Assets</a></li>
 		  		<li><a href="#viewer" data-toggle="tab">Viewer</a></li>
 			</ul>
 		</td>
