--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -15,6 +15,7 @@
         width: 100%;
       }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
 
       function init() {
