--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -66,7 +66,7 @@
 			    	<iframe src="editor_frame.html"></iframe>
 			  	</div>
                 <div class="tab-pane fade" id="assets">
-			    	<iframe src="editor_assets.html"></iframe>
+			    	<iframe src="editor_assets.html" scrolling="yes"></iframe>
 			    </div>
 			  	<div class="tab-pane fade" id="viewer">
 			    	<iframe class='viewFrame' src="editor_view.html"></iframe>
