Developing the webpage

--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -19,6 +19,11 @@
     <script>
 
       function init() {
+        var formatedVariables="";
+        for(var model in parent.models){
+            formatedVariables+=model+"\n";
+        }
+        $('#variablelist').html(formatedVariables);
         $('#modellist').load("./rest/dao/models");
       }
     </script>
