--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -31,6 +31,11 @@
       }
     function selectProject(project){
         parent.models.push(project);
+        var formatedVariables="";
+        for(var model in parent.models){
+            formatedVariables+="<li><a href='"+model+"'>"+model+"</a></li>";
+        }
+        $('#variablelist').html(formatedVariables);
     }
     </script>
   </head>
