--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -22,14 +22,12 @@
     <script>
 
       function init() {
-          console.log("\nINIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIT");
         var formatedVariables="";
         for(var i in parent.models){
             formatedVariables+="<li><a href='"+parent.models[i]+"'>"+parent.models[i]+"</a></li>";
         }
         $('#variablelist').html(formatedVariables);
         $('#modellist').load("./rest/dao/models");
-          console.log("\nDONEEEEE");
       }
     function selectProject(project){
         parent.models.push(project);
@@ -39,6 +37,9 @@
         }
         $('#variablelist').html(formatedVariables);
     }
+    function updateModels(){
+        $('#modellist').load("./rest/dao/models");
+    } 
     </script>
   </head>
   <body onload="init()">
@@ -61,9 +62,9 @@
         </div>
     </nav>
       <br>Choose MODEL to upload<br>
-        <form action="./rest/dao/upload/model" method="post" enctype="multipart/form-data">
+        <form action="./rest/dao/upload/model" method="post" enctype="multipart/form-data" onsubmit="return updateModels()">
             <input name="file" id="filename" type="file" /><br>
-    	   <button name="submit" type="submit" onclick="init()">Upload</button>
+    	   <button name="submit" type="submit" onclick="updateModels()">Upload</button>
         </form>
     <div id="modellist">
     LIST OF MODELS SHOULD GO HERE
