Developing the webpage

--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -66,6 +66,7 @@
             <input name="file" id="filename" type="file" /><br>
     	   <button name="submit" type="submit" onclick="updateModels()">Upload</button>
         </form>
+      <button name="update" type="button" onclick="updateModels()">Update</button>
     <div id="modellist">
     LIST OF MODELS SHOULD GO HERE
     </div>
