--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -27,7 +27,7 @@
   	<!-- div id="form" class="hidden">
 		
 	</div -->
-	< div class="navbar">
+	<!-- div class="navbar">
 		<button id='saveButton'>Save</button>
 		<button id='resetButton'>Reset</button>
 		<button id='runButton'>Run</button>
@@ -48,7 +48,7 @@
             <input name="file" id="filename" type="file" /><br>
     	   <button name="submit" type="submit">Upload</button>
         </form>
-	</div>  
+	</div-->  
 	<table id="myTabContent" width="100%" height="100%" role="main">
     <tr>
 		<td class="navbar">
