--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -21,26 +21,31 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script>
 
-      function init() {
+    function updateVariables(){
         var formatedVariables="";
         for(var i in parent.models){
-            formatedVariables+="<li><a href='"+parent.models[i]+"'>"+parent.models[i]+"</a></li>";
-        }
-        $('#variablelist').html(formatedVariables);
-        $('#modellist').load("./rest/dao/models");
-      }
-    function selectProject(project){
-        if(jQuery.inArray(project, parent.models)<0)
-            parent.models.push(project);   
-        var formatedVariables="";
-        for(var i in parent.models){
-            formatedVariables+="<li><button href='"+parent.models[i]+"'>"+parent.models[i]+"</a></li>";
+            formatedVariables+="<li><button onclick='deleteModel(\""+parent.models[i]+"\");updateVariables();'>"+parent.models[i]+"</a></li>";
         }
         $('#variablelist').html(formatedVariables);
     }
     function updateModels(){
         $('#modellist').load("./rest/dao/models");
-    } 
+    }  
+    function init() {
+        updateVariables();
+        updateModels();
+    }
+    function selectModel(model){
+        if(jQuery.inArray(project, parent.models)<0)
+            parent.models.push(model);   
+        
+    }
+    function deleteModel(model){
+        var i = jQuery.inArray(project, parent.models
+        if(i>=0)
+            parent.models.splice(i, 1);
+    }
+    
     </script>
   </head>
   <body onload="init()">
