--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -41,7 +41,7 @@
         
     }
     function deleteModel(model){
-        var i = jQuery.inArray(project, parent.models
+        var i = jQuery.inArray(project, parent.models);
         if(i>=0)
             parent.models.splice(i, 1);
     }
