--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -37,13 +37,15 @@
     }
     function selectModel(model){
         if(jQuery.inArray(project, parent.models)<0)
-            parent.models.push(model);   
+            parent.models.push(model); 
+        updateVariables();
         
     }
     function deleteModel(model){
         var i = jQuery.inArray(project, parent.models);
         if(i>=0)
             parent.models.splice(i, 1);
+        updateVariables();
     }
     
     </script>
