Developing the webpage

--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -36,7 +36,7 @@
         updateModels();
     }
     function selectModel(model){
-        if(jQuery.inArray(project, parent.models)<0)
+        if(jQuery.inArray(model, parent.models)<0)
             parent.models.push(model); 
         updateVariables();
         
