Developing the webpage

--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -42,7 +42,7 @@
         
     }
     function deleteModel(model){
-        var i = jQuery.inArray(project, parent.models);
+        var i = jQuery.inArray(model, parent.models);
         if(i>=0)
             parent.models.splice(i, 1);
         updateVariables();
