--- a/WebContent/editor_frame.html
+++ b/WebContent/editor_frame.html
@@ -77,6 +77,7 @@
             <block type="text">
             	<field name="TEXT">house_15</field>
             </block>
+          <block type="model"></block>
       </category>
     </xml>
   </body>
