Developing the webpage

--- a/WebContent/editor_frame.html
+++ b/WebContent/editor_frame.html
@@ -77,6 +77,8 @@
             <block type="text">
             	<field name="TEXT">house_15</field>
             </block>
+          </category>
+         <category name='Model'>
           <block type="model"></block>
       </category>
     </xml>
