General Cleaning. Finishing REST. Developing the webpage

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -89,7 +89,7 @@
 	              </li>
 	        </ul>
 		</div>
-		<button>BROWSE MORE</button>
+		<button onclick="$('#thumbs').load('./rest/dao/projects');">BROWSE MORE</button>
 	</div>
 	<div id=footer></div>
 	<script src="./js/index.js"></script>
