Fixing JavaScript and Project loading

--- a/WebContent/editor_view.html
+++ b/WebContent/editor_view.html
@@ -13,6 +13,7 @@
 
     <!--load 3D libraries-->
     <script type="text/javascript" src="js/threejs/three.min.js"></script>
+    <script type="text/javascript" src="js/threejs/ZipLoader.js"></script>
 
     <!--load AR libraries-->
     <script type="text/javascript" src="js/js-aruco/svd.js"></script>
