Fixing JavaScript and Project loading

--- a/WebContent/editor_view.html
+++ b/WebContent/editor_view.html
@@ -5,7 +5,7 @@
     <title>skarf.js - Track Three.js Scene</title>
     <meta charset="UTF-8" />
 
-    <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
 
     <!--load helper libraries-->
@@ -13,7 +13,7 @@
 
     <!--load 3D libraries-->
     <script type="text/javascript" src="js/threejs/three.min.js"></script>
-    <script type="text/javascript" src="js/threejs/ZipLoader.js"></script>
+    <script type="text/javascript" src="js/threejs/ZipLoader.min.js"></script>
 
     <!--load AR libraries-->
     <script type="text/javascript" src="js/js-aruco/svd.js"></script>
