Fixing JavaScript and Project loading

--- a/WebContent/editor_view.html
+++ b/WebContent/editor_view.html
@@ -90,6 +90,10 @@
     window.run = function run(generatedCode){
         arc.evaluate(generatedCode);
     }
+    
+    function loadCodeandRun(code){
+        arc.evaluate(code);
+    }
 
     window.onload = onLoad;
     </script>
