Fixing JavaScript and Project loading

--- a/WebContent/editor_view.html
+++ b/WebContent/editor_view.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!--load helper libraries-->
-    <script type="text/javascript" src="js/jquery/jquery.min.js"></script>
+    <!--script type="text/javascript" src="js/jquery/jquery.min.js"></script-->
 
     <!--load 3D libraries-->
     <script type="text/javascript" src="js/threejs/three.min.js"></script>
