Fixing JavaScript and Project loading

--- a/WebContent/editor_frame.html
+++ b/WebContent/editor_frame.html
@@ -66,6 +66,7 @@
           </category>
          <category name='Model'>
           <block type="model"></block>
+             <block type="animation"></block>
       </category>
     </xml>
     <script>
