--- a/WebContent/editor_frame.html
+++ b/WebContent/editor_frame.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/Blockly/blockly_compressed.js"></script>
     <script type="text/javascript" src="js/Blockly/blocks_compressed.js"></script>
     <script type="text/javascript" src="js/Blockly/javascript_compressed.js"></script>
