Fixing JavaScript and Project loading

--- a/WebContent/editor_view.html
+++ b/WebContent/editor_view.html
@@ -10,7 +10,8 @@
 
     <!--load helper libraries-->
     <!--script type="text/javascript" src="js/jquery/jquery.min.js"></script-->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    
     <!--load 3D libraries-->
     <script type="text/javascript" src="js/threejs/three.min.js"></script>
     <script type="text/javascript" src="js/threejs/ZipLoader.min.js"></script>
