Implementando el estilo de la página web

--- a/WebContent/main_menu.html
+++ b/WebContent/main_menu.html
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">VEARD</a>
+                <a class="navbar-brand" href="index.html"><img src="img/VEARDOS.png" alt="VEARD"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 
@@ -20,10 +20,10 @@
 				</form>
 				<ul class="nav navbar-nav pull-right">
 					<li id="contextButton"><form action="editor.html">
-    						<button type="submit" class="btn btn-default navbar-btn">New Project</button>
+    						<button type="submit" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> New Project</button>
 						</form></li>
 			        <li class="dropdown">
-			          	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+			          	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class='glyphicon glyphicon-user' aria-hidden='true'></span> My Account <b class="caret"></b></a>
 			          	<ul class="dropdown-menu">
 				            <li><a href="#">My Projects</a></li>
 				            <li><a href="#">Profile</a></li>
