--- a/WebContent/editor.html
+++ b/WebContent/editor.html
@@ -53,9 +53,9 @@
     <tr>
 		<td class="navbar">
 		    <ul id="myTab" class="nav nav-tabs">
-		  		<li class="active"><a href="#editor" data-toggle="tab">Editor</a></li>
-                <li><a href="#assets" data-toggle="tab">Assets</a></li>
-		  		<li><a href="#viewer" data-toggle="tab">Viewer</a></li>
+		  		<li class="active"><a href="#editor" data-toggle="tab"><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span> Editor</a></li>
+                <li><a href="#assets" data-toggle="tab"><span class='glyphicon glyphicon-paperclip' aria-hidden='true'></span> Assets</a></li>
+		  		<li><a href="#viewer" data-toggle="tab"><span class='glyphicon glyphicon-facetime-video' aria-hidden='true'></span> Viewer</a></li>
 			</ul>
 		</td>
 	</tr>
