--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,73 +23,130 @@
 
 <body role="document">
 	<div id=header></div>
-	<div class="container" role="main"> 
+    <div class="jumbotron container">
+        <img class="jumboimage" src="./img/VEARD.png" alt="VEARD">
+            <h2>Visual Environment for Augmented Reality Development</h2>   
+  </div>
+    
+    <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>
+
+<!-- Use any element to open the sidenav -->
+<span onclick="openNav()">open</span>
+    
+	<div class="container maincont" role="main"> 
+        <h2>Project library:</h2>
 		<div id="thumbs" class="row">
-            PLACEHOLDER
+            <h3>PLACEHOLDER</h3>
 			<ul  class="thumbnails">
 	            <li class="col-md-3">
 	              <div class="thumbnail">
-	                <img src="http://placehold.it/320x200" alt="ALT NAME">
+	                <img src="img/veardicon0.png" alt="ALT NAME">
 	                <div class="caption">
 	                  <h3>Header Name</h3>
 	                  <p>Description</p>
-	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block">Open</a></p>
+	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
 	                </div>
 	              </div>
 	            </li>
 	              <li class="col-md-3">
 	              <div class="thumbnail">
-	                <img src="http://placehold.it/320x200" alt="ALT NAME">
+	                <img src="img/veardicon1.png" alt="ALT NAME">
 	                <div class="caption">
 	                  <h3>Header Name</h3>
 	                  <p>Description</p>
-	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block">Open</a></p>
+	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
 	                </div>
 	              </div>
 	            </li>
 	              <li class="col-md-3">
 	              <div class="thumbnail">
-	                <img src="http://placehold.it/320x200" alt="ALT NAME">
+	                <img src="img/veardicon2.png" alt="ALT NAME">
 	                <div class="caption">
 	                  <h3>Header Name</h3>
 	                  <p>Description</p>
-	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block">Open</a></p>
+	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
 	                </div>
 	              </div>
 	            </li>
 	            <li class="col-md-3">
 	              <div class="thumbnail">
-	                <img src="http://placehold.it/320x200" alt="ALT NAME">
+	                <img src="img/veardicon3.png" alt="ALT NAME">
 	                <div class="caption">
 	                  <h3>Header Name</h3>
 	                  <p>Description</p>
-	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block">Open</a></p>
+	                  <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
 	                </div>
 	              </div>
 	            </li>
 	              <li class="col-md-3">
 	                <div class="thumbnail">
-	                  <img src="http://placehold.it/320x200" alt="ALT NAME">
+	                  <img src="img/veardicon4.png" alt="ALT NAME">
 	                  <div class="caption">
 	                    <h3>Header Name</h3>
 	                    <p>Description</p>
-	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block">Open</a></p>
+	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
 	                  </div>
 	                </div>
 	              </li>
 	              <li class="col-md-3">
 	                <div class="thumbnail">
-	                  <img src="http://placehold.it/320x200" alt="ALT NAME">
+	                  <img src="img/veardicon5.png" alt="ALT NAME">
 	                  <div class="caption">
 	                    <h3>Header Name</h3>
 	                    <p>Description</p>
-	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block">Open</a></p>
+	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
+	                  </div>
+	                </div>
+	              </li>
+                <li class="col-md-3">
+	                <div class="thumbnail">
+	                  <img src="img/veardicon6.png" alt="ALT NAME">
+	                  <div class="caption">
+	                    <h3>Header Name</h3>
+	                    <p>Description</p>
+	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
+	                  </div>
+	                </div>
+	              </li>
+                <li class="col-md-3">
+	                <div class="thumbnail">
+	                  <img src="img/veardicon7.png" alt="ALT NAME">
+	                  <div class="caption">
+	                    <h3>Header Name</h3>
+	                    <p>Description</p>
+	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
+	                  </div>
+	                </div>
+	              </li>
+                <li class="col-md-3">
+	                <div class="thumbnail">
+	                  <img src="img/veardicon8.png" alt="ALT NAME">
+	                  <div class="caption">
+	                    <h3>Header Name</h3>
+	                    <p>Description</p>
+	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
+	                  </div>
+	                </div>
+	              </li>
+                <li class="col-md-3">
+	                <div class="thumbnail">
+	                  <img src="img/veardicon9.png" alt="ALT NAME">
+	                  <div class="caption">
+	                    <h3>Header Name</h3>
+	                    <p>Description</p>
+	                    <p align="center"><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Open</a><a href="http://bootsnipp.com/" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a></p>
 	                  </div>
 	                </div>
 	              </li>
 	        </ul>
 		</div>
-		<button onclick="$('#thumbs').load('./rest/dao/projects');">BROWSE MORE</button>
+		<button class="btn btn-primary btn-block" onclick="$('#thumbs').load('./rest/dao/projects');"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>  Browse More</button>
 	</div>
 	<div id=footer></div>
 	<script src="./js/index.js"></script>
