Implementando el estilo de la página web

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,16 +28,15 @@
             <h2>Visual Environment for Augmented Reality Development</h2>   
   </div>
     
-    <div id="mySidenav" class="sidenav">
+    <div id="mySidenav" class="sidenav text-center">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+        <h2>Hey!</h2><h4> This is a reminder that you can find some instructions<a class="btn btn-default sidebtn" href="about.html">Here</a></h4>
+        <h4>And if you need help with the AR markers, there's a <a class="btn btn-default sidebtn" href="http://terpconnect.umd.edu/~jwelsh12/enes100/markergen.html">Generator</a></h4>
+        <h2>That's all!</h2>
 </div>
 
 <!-- Use any element to open the sidenav -->
-<span onclick="openNav()">open</span>
+<!--span onclick="openNav()">open</span-->
     
 	<div class="container maincont" role="main"> 
         <h2>Project library:</h2>
